# ros2_roboclaw_driver

./: .clang-format  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  LICENSE  README.md  REMOVE_UNUSED_FILES.txt  TODO  architectural_analysis.md  compile_commands.json  debug_roboclaw_device.sh  package.xml  test_roboclaw_communication.sh
config/: motor_driver.yaml  roboclaw_driver.yaml  ros2 run ros2_roboclaw_driver capture_ha.yaml
include/: io_executor.h  motor_driver.h  roboclaw.h  roboclaw_cmd.h  roboclaw_cmd_do_buffered_m1m2_drive_speed_accel_distance.h  roboclaw_cmd_read_encoder.h  roboclaw_cmd_read_encoder_speed.h  roboclaw_cmd_read_firmware_version.h  roboclaw_cmd_read_logic_battery_voltage.h  roboclaw_cmd_read_main_battery_voltage.h  roboclaw_cmd_read_motor_currents.h  roboclaw_cmd_read_motor_velocity_pidq.h  roboclaw_cmd_read_status.h  roboclaw_cmd_read_temperature.h  roboclaw_cmd_set_encoder_value.h  roboclaw_cmd_set_pid.h
include/roboclaw_driver/: command_shaper.hpp  driver_node.hpp  estop_manager.hpp  hardware_interface.hpp  odometry_integrator.hpp  params.hpp  protocol.hpp  roboclaw_device.hpp  safety_supervisor.hpp  status_decoder.hpp  transport.hpp
launch/: roboclaw_driver.launch.py  roboclaw_driver_debug.launch.py  ros2_roboclaw_driver.launch.py
msg/: RoboClawEStop.msg  RoboClawStatus.msg
src/: CMakeLists.txt  capture_harness.cpp  driver_main.cpp  driver_node.cpp  estop_manager.cpp  hardware_interface.cpp  io_executor.cpp  motor_driver.cpp  motor_driver.h  motor_driver_node.cpp  protocol.cpp  roboclaw.cpp  roboclaw.h  roboclaw_device.cpp  safety_supervisor.cpp  status_decoder.cpp  transport.cpp
srv/: ClearAllEStops.srv  ClearEStopSource.srv  ResetEncoders.srv
test/: README.md  passive_capture.cpp
test/square_demo/: square_runner.cpp
